update: 完善环链表, 二叉树遍历

--- a/Lecture04/code-tree.ipynb
+++ b/Lecture04/code-tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,17 @@
     "from random import randint as r\n",
     "from time import time as t\n",
     "\n",
+    "\n",
     "class TreeNode:\n",
     "    def __init__(self, x):\n",
     "        self.val = x\n",
     "        self.left = None\n",
-    "        self.right = None"
+    "        self.right = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +67,14 @@
     "    stack.append(p)\n",
     "    while len(stack) != 0:\n",
     "        p = stack[-1]\n",
-    "        if r(0,9) == 1 and len(stack) >= deep:\n",
+    "        if r(0, 9) == 1 and len(stack) >= deep:\n",
     "            # 达到深度, 说明是叶节点, 可以出栈\n",
     "            stack.pop()\n",
-    "        elif r(0,1) == 1 and p.left is None:\n",
+    "        elif r(0, 1) == 1 and p.left is None:\n",
     "            # 没有左子节点, 则创建左子节点\n",
     "            p.left = TreeNode(v(max_value))\n",
     "            stack.append(p.left)\n",
-    "        elif r(0,1) == 1 and p.right is None:\n",
+    "        elif r(0, 1) == 1 and p.right is None:\n",
     "            # 没有右子节点, 则创建右子节点\n",
     "            p.right = TreeNode(v(max_value))\n",
     "            stack.append(p.right)\n",
@@ -116,35 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recursion_binary_tree(root, order, print_arr):\n",
     "    if root is None:\n",
     "        return\n",
-    "    if order == 'pre':\n",
-    "        print_arr.append(root.val)\n",
+    "    print_arr.append(root.val) if order == 'pre' else None\n",
     "\n",
-    "    if root.left is not None:\n",
-    "        recursion_binary_tree(root.left, order, print_arr)\n",
-    "    if order == 'in':\n",
-    "        print_arr.append(root.val)\n",
+    "    recursion_binary_tree(root.left, order, print_arr) if root.left is not None else None\n",
+    "    print_arr.append(root.val) if order == 'in' else None\n",
     "\n",
-    "    if root.right is not None:\n",
-    "        recursion_binary_tree(root.right, order, print_arr)\n",
-    "    if order == 'pos':\n",
-    "        print_arr.append(root.val)\n",
+    "    recursion_binary_tree(root.right, order, print_arr) if root.right is not None else None\n",
+    "    print_arr.append(root.val) if order == 'pos' else None\n",
     "\n",
     "\n",
-    "def no_recursion_binary_tree(root, order, print_arr):\n",
+    "def non_recursion_binary_tree(root, order, print_arr):\n",
     "    if root is None:\n",
     "        return\n",
-    "    \"\"\"\n",
-    "    递归, 无非就是利用了栈, 既然是非递归, 那就自己定义栈。\n",
-    "    利用栈遍历时, 不管是哪种情况遍历方式, 第一步肯定是要将 \"头\" 入栈的。\n",
-    "    因为, 如果你第一步先将一个子节点入栈, 那么你就会丢失另一个子节点的信息。 除非你用一个新变量保存头。\n",
-    "    \"\"\"\n",
     "    if order == 'pre':\n",
     "        pre_order_binary_tree(root, print_arr)\n",
     "    elif order == 'in':\n",
@@ -154,55 +145,44 @@
     "\n",
     "\n",
     "def pre_order_binary_tree(root, print_arr):\n",
-    "    \"\"\"\n",
-    "    前序遍历, 即对每一棵子树都以 \"头左右\" 的方式遍历\n",
-    "    利用栈来遍历的方法, 就是用一个 \"头\", 换两个 \"子\"。\n",
-    "          就是头出栈时, 将两个子节点入栈。 在这里, 出栈时是特殊时机\n",
-    "          之后这两个子节点也会以 \"头\" 的形式出栈\n",
-    "          所以我们需要先压 \"右\", 再压 \"左\", \n",
-    "    \"\"\"\n",
     "    stack = [root]\n",
     "    while len(stack) != 0:\n",
-    "        # 先 \"头\", 所以先出栈\n",
-    "        head = stack.pop()\n",
-    "        print_arr.append(head.val)\n",
-    "        # 再 \"左右\", 因为是出栈才获取到节点, 所以需要先压右, 再压左\n",
-    "        if head.right is not None:\n",
-    "            stack.append(head.right)\n",
-    "        if head.left is not None:\n",
-    "            stack.append(head.left)\n",
+    "        head = stack.pop() # 头节点的使命(打印, 找到子节点)在一个循环中就能完成, 所以不需要继续保存头节点\n",
+    "        print_arr.append(head.val) \n",
+    "        # 我们是在出栈时打印, 所以先打印的东西要后压栈, 后打印的东西要先压栈\n",
+    "        stack.append(head.right) if head.right is not None else None\n",
+    "        stack.append(head.left) if head.left is not None else None\n",
     "\n",
     "\n",
     "def in_order_binary_tree(root, print_arr):\n",
     "    stack = []\n",
     "    p = root\n",
-    "    while len(stack) != 0 or p is not None:\n",
+    "    # 栈空时, 表示根节点的左部都完成了, 此时 p 为根节点的右子节点。 所以还不可以出栈\n",
+    "    while len(stack) != 0 or p is not None: \n",
     "        if p is not None:\n",
     "            # 不断将左边界压栈\n",
     "            stack.append(p)\n",
     "            p = p.left\n",
     "        else:\n",
-    "            # 左边界压完了, 则弹出一个左元素, 同时指针指向弹出元素的右边界, 让右边界继续进行\"左边界\"压栈\n",
+    "            # 左边界压完了, \"头\" 的使命也就结束了, 于是 \"头\" 出栈\n",
     "            p = stack.pop()\n",
     "            print_arr.append(p.val)\n",
+    "            # 同时 \"头\" 给出右子节点的位置\n",
     "            p = p.right\n",
     "\n",
     "\n",
     "def pos_order_binary_tree(root, print_arr):\n",
-    "    p = root\n",
     "    stack = [root]\n",
     "    collect = [] # 收集要要打印的元素\n",
     "    while len(stack) != 0:\n",
-    "        p = stack.pop()\n",
-    "        collect.append(p)\n",
-    "        if p.left is not None:\n",
-    "            stack.append(p.left)\n",
-    "        if p.right is not None:\n",
-    "            stack.append(p.right)\n",
-    "\n",
+    "        head = stack.pop()\n",
+    "        collect.append(head) # 将打印换成入栈\n",
+    "        # 压栈顺序变为先左后右\n",
+    "        stack.append(head.left) if head.left is not None else None\n",
+    "        stack.append(head.right) if head.right is not None else None\n",
+    "    # 前面和先序遍历一样, 然后将内容从栈中\n",
     "    while len(collect) != 0:\n",
-    "        print_arr.append(collect.pop().val)\n",
-    "\n"
+    "        print_arr.append(collect.pop().val)\n"
    ]
   },
   {
@@ -215,40 +195,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(非)递归遍历: ✔️\n"
+      "( 3.68s)(非)递归遍历 ✔️\n"
      ]
     }
    ],
    "source": [
-    "test_time = 5_000\n",
-    "max_size = 10\n",
-    "max_value = 2000\n",
-    "succeed = True\n",
+    "test_time, max_size, max_value, succeed = 10_000, 10, 200, True\n",
     "\n",
-    "for i in range(test_time):\n",
+    "st = t()\n",
+    "for _ in range(test_time):\n",
     "    root = generate_binary_tree(max_size, max_value)\n",
     "    pre1, pre2 = [], []\n",
     "    recursion_binary_tree(root, 'pre', pre1)\n",
-    "    no_recursion_binary_tree(root, 'pre', pre2)\n",
-    "    in1, in2 = [], []\n",
-    "    recursion_binary_tree(root, 'in', in1)\n",
-    "    no_recursion_binary_tree(root, 'in', in2)\n",
+    "    non_recursion_binary_tree(root, 'pre', pre2)\n",
     "    pos1, pos2 = [], []\n",
     "    recursion_binary_tree(root, 'pos', pos1)\n",
-    "    no_recursion_binary_tree(root, 'pos', pos2)\n",
+    "    non_recursion_binary_tree(root, 'pos', pos2)\n",
+    "    in1, in2 = [], []\n",
+    "    recursion_binary_tree(root, 'in', in1)\n",
+    "    non_recursion_binary_tree(root, 'in', in2)\n",
     "\n",
-    "    if pre1 != pre2 or in1 != in2 or pos1 != pos2:\n",
+    "    if pre1 != pre2 or pos1 != pos2 or in1 != in2 :\n",
     "        succeed = False\n",
     "        break\n",
-    "\n",
-    "print('(非)递归遍历:', '✔️' if succeed else '❌')\n"
+    "print(f'({t()-st:5.2f}s)(非)递归遍历', '✔️' if succeed else '❌')\n"
    ]
   },
   {
@@ -256,23 +233,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST - 二叉树宽度遍历"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 实现"
+    "# 二叉树宽度遍历"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 9 8 7 6 5 4 3 2 1 "
+     ]
+    }
+   ],
    "source": [
+    "def t4f1():\n",
+    "    return True if r(1, 5) != 5 else False\n",
+    "\n",
+    "\n",
+    "def traversal_generate_binary_tree(size=10):\n",
+    "    root = TreeNode(size)\n",
+    "    size -= 1\n",
+    "    queue = Queue()\n",
+    "    queue.put(root)\n",
+    "    while size > 0:\n",
+    "        # 依次从队列中取出节点, 然后为其随机生成两个子节点, 同时将子节点填入队列中\n",
+    "        cur = queue.get()\n",
+    "        if t4f1():\n",
+    "            cur.left = TreeNode(size)\n",
+    "            size -= 1\n",
+    "            queue.put(cur.left)\n",
+    "        if t4f1():\n",
+    "            cur.right = TreeNode(size)\n",
+    "            size -= 1\n",
+    "            queue.put(cur.right)\n",
+    "    return root\n",
+    "\n",
+    "\n",
     "def binary_tree_traversal(root):\n",
     "    if root is None:\n",
     "        return\n",
@@ -280,11 +280,13 @@
     "    queue.put(root)\n",
     "    while not queue.empty():\n",
     "        cur = queue.get()\n",
-    "        print(cur.val)\n",
+    "        print(cur.val, end=' ')\n",
     "        if cur.left is not None:\n",
     "            queue.put(cur.left)\n",
     "        if cur.right is not None:\n",
-    "            queue.put(cur.right)"
+    "            queue.put(cur.right)\n",
+    "\n",
+    "binary_tree_traversal(traversal_generate_binary_tree())"
    ]
   },
   {
@@ -305,11 +307,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def binary_tree_max_width(root):\n",
+    "def binary_tree_max_width1(root):\n",
+    "    max_w = 0 # 最大宽度\n",
+    "    if root is None:\n",
+    "        return max_w\n",
+    "    queue = Queue()\n",
+    "    queue.put(root)\n",
+    "\n",
+    "    level_map = {} # 存储每个节点所在的层数\n",
+    "    level_map[root] = 1 # root 的层数是第一层\n",
+    "    store_level = 1 # 记录弹出元素前位于第几层\n",
+    "    store_w = 0 # 统计当前层宽度。 弹出元素时加 1\n",
+    "    while not queue.empty():\n",
+    "        cur = queue.get()\n",
+    "        if store_level == level_map[cur]:\n",
+    "            # 还在同一层, 宽度(节点数)加1\n",
+    "            store_w += 1\n",
+    "        else:\n",
+    "            # 弹出元素层级和记录的层级不同, 说明当前循环已经进去下一层\n",
+    "            store_level += 1\n",
+    "            max_w = max(store_w, max_w)\n",
+    "            store_w = 1 # 新一层的第一个元素已经弹出\n",
+    "\n",
+    "        # 前面代码能成立的条件是, 通过 map 同理了每个节点的层数\n",
+    "        if cur.left is not None:\n",
+    "            # 在将新节点加到队列中时, 存储该节点的对应层数; 该节点的层数等于其父节点的层数+1\n",
+    "            level_map[cur.left] = level_map[cur] + 1\n",
+    "            queue.put(cur.left)\n",
+    "        if cur.right is not None:\n",
+    "            level_map[cur.right] = level_map[cur] + 1\n",
+    "            queue.put(cur.right)\n",
+    "    # 遍历完最后一层后, 再\"结算\"一下。\n",
+    "    max_w = max(store_w, max_w)\n",
+    "    return max_w\n",
+    "\n",
+    "\n",
+    "def binary_tree_max_width2(root):\n",
     "    max_w = 0\n",
     "    if root is None:\n",
     "        return max_w\n",
@@ -353,30 +390,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( 6.47s)最大宽度 ✔️\n"
+     ]
     }
    ],
    "source": [
-    "root = TreeNode(1)\n",
-    "root.left = TreeNode(2)\n",
-    "root.right = TreeNode(3)\n",
-    "root.left.left = TreeNode(4)\n",
-    "root.left.right = TreeNode(5)\n",
-    "root.right.left = TreeNode(6)\n",
-    "root.right.right = TreeNode(7)\n",
+    "test_time, max_size, max_value, succeed = 10_000, 10, 200, True\n",
     "\n",
-    "binary_tree_max_width(root)"
+    "st = t()\n",
+    "for _ in range(test_time):\n",
+    "    root = generate_binary_tree(max_size, max_value)\n",
+    "\n",
+    "    if binary_tree_max_width1(root) != binary_tree_max_width2(root):\n",
+    "        succeed = False\n",
+    "        break\n",
+    "print(f'({t()-st:5.2f}s)最大宽度', '✔️' if succeed else '❌')\n"
    ]
   },
   {
@@ -397,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +523,7 @@
        "[[1], [2, 3], [4, 5, 6, 7]]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
