--- a/Lecture04/code.ipynb
+++ b/Lecture04/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 2.84s)反转单链表: ✔️\n",
-      "( 3.53s)反转双链表: ✔️\n"
+      "( 2.92s)反转单链表: ✔️\n",
+      "( 3.58s)反转双链表: ✔️\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 4.35s)打印链表公共部分: ✔️\n"
+      "( 4.33s)打印链表公共部分: ✔️\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,14 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 4.86s)判断是否回文-方法1,2,3 ✔️\n"
+      "( 4.89s)判断是否回文-方法1,2,3 ✔️\n"
      ]
     }
    ],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,14 +672,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 4.36s)validate_partition: ✔️\n"
+      "( 4.30s)validate_partition: ✔️\n"
      ]
     }
    ],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,15 +801,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 6.16s)链表 partition 划分, 方法1 ✔️\n",
-      "( 4.21s)链表 partition 划分, 方法2 ✔️\n"
+      "( 6.29s)链表 partition 划分, 方法1 ✔️\n",
+      "( 4.35s)链表 partition 划分, 方法2 ✔️\n"
      ]
     }
    ],
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,14 +988,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(14.47s)复制含有随机指针节点的链表, 方法1, 2 ✔️\n"
+      "(14.90s)复制含有随机指针节点的链表, 方法1, 2 ✔️\n"
      ]
     }
    ],
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,8 +1105,9 @@
     "            return None\n",
     "        quick = quick.next.next\n",
     "        slow = slow.next\n",
-    "    # 快慢指针相遇后, 快指针从头节点开始, 每次一步\n",
+    "    # 快慢指针相遇后, 快指针重新头节点开始, 每次一步\n",
     "    quick = head\n",
+    "    # 下次相遇时的节点就是环点\n",
     "    while quick is not slow:\n",
     "        quick = quick.next\n",
     "        slow = slow.next\n",
@@ -1123,14 +1124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 2.56s)判断有无环, 方法1 ✔️\n"
+      "( 2.66s)判断有无环, 方法1,2 ✔️\n"
      ]
     }
    ],
@@ -1154,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 判断(有环/无环)链表相交"
+    "# TEST 判断(有环/无环)链表相交并获取交点"
    ]
   },
   {
@@ -1167,52 +1168,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_len(head):\n",
+    "from random import randint as r\n",
+    "\n",
+    "\n",
+    "def v(max_value):\n",
+    "    return r(-max_value, max_value)\n",
+    "\n",
+    "\n",
+    "def get_no_cycle_len(head):\n",
     "    l = 0\n",
     "    while head is not None:\n",
     "        l += 1\n",
     "        head = head.next\n",
     "    return l\n",
     "\n",
+    "\n",
+    "def get_cycle_len(head, cycle):\n",
+    "    if is_cycle_linked_list2(head) is None:\n",
+    "        raise Exception(\"不是成环链表\")\n",
+    "    # 计算环点前的长度\n",
+    "    l = 0\n",
+    "    while head is not cycle:\n",
+    "        l += 1\n",
+    "        head = head.next\n",
+    "    # 计算环圈长度\n",
+    "    l += 1  # 加上环点本身\n",
+    "    head = head.next\n",
+    "    while head is not cycle:\n",
+    "        l += 1\n",
+    "        head = head.next\n",
+    "    return l\n",
+    "\n",
+    "\n",
     "def must_cycle_linked_list(max_size=30, max_value=60):\n",
-    "    # 成环\n",
-    "    # 先正常生成一串链表\n",
-    "    head = generate_random_linked_list(max_size, max_value)\n",
-    "    if head is None: \n",
-    "        return None, None\n",
-    "    \n",
-    "    # 获取链表的长度\n",
+    "    # 成环。 允许单节点成环\n",
+    "    # 先生成一串不成环链表\n",
+    "    arr = [v(max_value) for _ in range(r(1, max_size))]\n",
+    "    head = arr2linked_list(arr)\n",
+    "\n",
+    "    # 获取链表的长度和尾节点\n",
     "    l, tail = 1, head\n",
     "    while tail.next is not None:\n",
     "        l += 1\n",
     "        tail = tail.next\n",
-    "    # 随机指定某个节点为环点\n",
-    "    random_cycle = r(0, l-1) # 注意是 l-1, 因为是从 0 开始的\n",
+    "    # 随机指定入环点\n",
+    "    # 这里从 0 开始, 所以 l-1。 同时后面 while 判断也是 0。 如果改为从 1 开始, 则是 (1,l), while != 1\n",
+    "    random_cycle_index = r(0, l-1)\n",
     "    random_cycle_node = head\n",
-    "    while random_cycle != 0:\n",
-    "        random_cycle -= 1\n",
+    "    while random_cycle_index != 0:\n",
+    "        random_cycle_index -= 1\n",
     "        random_cycle_node = random_cycle_node.next\n",
-    "    # 尾巴指向环点\n",
+    "    # 尾巴指向环点完成\"环化\"\n",
     "    tail.next = random_cycle_node\n",
     "    return head, random_cycle_node\n",
-    "    \n",
     "\n",
     "\n",
-    "def intersect_no_cycle(max_size, max_value):\n",
+    "def generate_intersect_no_cycle_linked_list(max_size, max_value):\n",
     "    # 先生成一条链表\n",
     "    h1 = generate_random_linked_list(max_size, max_value)\n",
     "    if h1 is None:\n",
     "        return None, None, None\n",
-    "    h1_len, p = get_len(h1), h1\n",
+    "    h1_len, p = get_no_cycle_len(h1), h1\n",
+    "    # 指定交叉点\n",
     "    h2_size = rand_ = r(0, h1_len)\n",
     "    while rand_ != 0:\n",
     "        p = p.next\n",
     "        rand_ -= 1\n",
     "    cycle_node = p\n",
+    "    # 再生产一条链表, 将它尾节点连接到交叉点处\n",
     "    p = h2 = generate_random_linked_list(h2_size, max_value)\n",
     "    if p is None:\n",
     "        return h1, cycle_node, cycle_node\n",
@@ -1221,59 +1248,39 @@
     "    p.next = cycle_node\n",
     "    return h1, h2, cycle_node\n",
     "\n",
-    "def get_cycle_len(head, cycle=None):\n",
-    "    if is_cycle_linked_list2(head) is None:\n",
-    "        print(head, cycle)\n",
-    "        raise ValueError(\"不是成环链表\")\n",
     "\n",
-    "    if head is None:\n",
-    "        return 0\n",
-    "    if cycle is None:\n",
-    "        cycle = is_cycle_linked_list2(head)\n",
-    "    l = 0\n",
-    "    while head is not cycle:\n",
-    "        l += 1\n",
-    "        head = head.next\n",
-    "    l += 1\n",
-    "    head = head.next\n",
-    "    while head is not cycle:\n",
-    "        l += 1\n",
-    "        head = head.next\n",
-    "    return l\n",
-    "\n",
-    "\n",
-    "def intersect_cycle(max_size, max_value):\n",
+    "def generate_intersect_cycle_linked_list(max_size, max_value):\n",
+    "    # 先生成一条成环链表\n",
     "    h1, cycle = must_cycle_linked_list(max_size, max_value)\n",
     "    h1_len = get_cycle_len(h1, cycle)\n",
-    "    intersect_l = r(0, h1_len-1)\n",
-    "    intersect = h1\n",
-    "    while intersect_l != 0:\n",
-    "        intersect_l -= 1\n",
-    "        intersect = intersect.next\n",
-    "    # 选定了相交点, 可能是在成环前, 也可能是在成环后。\n",
-    "    \n",
-    "    p = h2 = generate_random_linked_list(r(0, max_size), max_value)\n",
-    "    if p is None:\n",
-    "        return h1, intersect, intersect\n",
-    "    while p.next is not None:\n",
-    "        p = p.next\n",
-    "    p.next = intersect\n",
-    "    return h1, h2, intersect\n",
+    "    # 随机交叉点, 可能在入环前, 可能在入环后\n",
+    "    x_len = r(0, h1_len-1)\n",
+    "    x_node = h1\n",
+    "    while x_len != 0:\n",
+    "        x_len -= 1\n",
+    "        x_node = x_node.next\n",
+    "    # 在交叉点前接上一条链表\n",
+    "    tail = h2 = generate_random_linked_list(r(0, max_size), max_value)\n",
+    "    if tail is None:\n",
+    "        return h1, x_node, x_node\n",
+    "    while tail.next is not None:\n",
+    "        tail = tail.next\n",
+    "    tail.next = x_node\n",
+    "    return h1, h2, x_node\n",
     "\n",
     "\n",
-    "\n",
-    "def generate_intersect_linked_list(max_size, max_value):\n",
+    "def generate_random_intersect_linked_list(max_size, max_value):\n",
     "    if r(0, 2) == 1:\n",
-    "        # 生成一条成环, 一条可能不成环\n",
-    "        h1 = generate_random_linked_list(max_size, max_value)\n",
+    "        # 生成两条不相交链表, 链表成环随机\n",
+    "        h1, _ = generate_cycle_linked_list(max_size, max_value)\n",
     "        h2, _ = generate_cycle_linked_list(max_size, max_value)\n",
     "        return h1, h2, None\n",
     "    elif r(0, 2) == 1:\n",
-    "        # 生成两条不成环相交链表\n",
-    "        return intersect_no_cycle(max_size, max_value)\n",
-    "    # else:\n",
-    "    #     # 生成两条成环相交链表\n",
-    "    #     return intersect_cycle(max_size, max_value)\n",
+    "        # 生成两条相交链表, 两个链表都不成环\n",
+    "        return generate_intersect_no_cycle_linked_list(max_size, max_value)\n",
+    "    else:\n",
+    "        # 生成两条相交链表, 两个链表都成环\n",
+    "        return generate_intersect_cycle_linked_list(max_size, max_value)\n",
     "\n",
     "    return None, None, None\n"
    ]
@@ -1288,43 +1295,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_intersect_linked_list(h1, h2):\n",
     "    if h1 is None or h2 is None:\n",
     "        return None\n",
-    "    cycle1 = is_cycle_linked_list2(h1)\n",
-    "    cycle2 = is_cycle_linked_list2(h2)\n",
-    "    if cycle1 is None and cycle2 is None: # 都不成环\n",
+    "    x_node1 = is_cycle_linked_list2(h1)\n",
+    "    x_node2 = is_cycle_linked_list2(h2)\n",
+    "    if x_node1 is None and x_node2 is None:  # 都不成环\n",
     "        return no_cycle_intersect(h1, h2)\n",
-    "    if cycle1 is not None and cycle2 is not None: # 都成环\n",
-    "        return cycle_intersect(h1, cycle1, h2, cycle2)\n",
+    "    if x_node1 is not None and x_node2 is not None:  # 都成环\n",
+    "        return cycle_intersect(h1, x_node1, h2, x_node2)\n",
     "    # 一条成环一条不成环, 一定不相交\n",
     "    return None\n",
     "\n",
     "\n",
-    "def no_cycle_intersect(h1, h2, end=None):\n",
+    "def no_cycle_intersect(h1, h2):\n",
     "    if h1 is None or h2 is None:\n",
     "        return None\n",
-    "    # 因为只需要长度差值, 不需要具体长度, 所以可以直接使用一个变量解决问题\n",
+    "    # 因为只需要长度差值, 不需要具体长度, 所以只需一个变量\n",
     "    l_diff = 0\n",
-    "    p_long, p_short = h1, h2\n",
-    "    while p_long is not end and p_long.next is not end:\n",
+    "    tail1, tail2 = h1, h2\n",
+    "    while tail1.next is not None:\n",
     "        l_diff += 1\n",
-    "        p_long = p_long.next\n",
-    "    while p_short is not end and p_short.next is not end:\n",
+    "        tail1 = tail1.next\n",
+    "    while tail2.next is not None:\n",
     "        l_diff -= 1\n",
-    "        p_short = p_short.next\n",
-    "    if p_long is not p_short: # 不相交\n",
+    "        tail2 = tail2.next\n",
+    "    if tail1 is not tail2:\n",
     "        return None\n",
     "\n",
     "    p_long, p_short = h1, h2\n",
     "    if l_diff < 0:\n",
-    "        # h1 比 h2 短, 说明 赋值反了\n",
     "        p_long, p_short = h2, h1\n",
-    "    # 让长的链表先走 l_diff 个距离。 \n",
+    "    # 让长的链表先走 l_diff 个距离。\n",
     "    for _ in range(abs(l_diff)):\n",
     "        p_long = p_long.next\n",
     "    # 然后两个链表一起移动, 相遇时的点就是交点\n",
@@ -1332,20 +1338,35 @@
     "        p_long = p_long.next\n",
     "        p_short = p_short.next\n",
     "    return p_long\n",
-    "    \n",
-    "    \n",
-    "def cycle_intersect(h1, cycle1, h2, cycle2):\n",
-    "    if cycle1 is cycle2: # 成环点相同\n",
-    "        # 像判断不成环链表那样判断即可\n",
-    "        return no_cycle_intersect(h1, h2, cycle1)\n",
-    "    \n",
-    "    # 成环点不同, 则其中一条环圈上寻找是否有另一个成环点。\n",
-    "    p = cycle1.next\n",
-    "    while p is not cycle1:\n",
-    "        if p is cycle2:\n",
+    "\n",
+    "\n",
+    "def cycle_intersect(h1, x_node1, h2, x_node2):\n",
+    "    if x_node1 is x_node2:  # 成环点相同, 说明是相交后成环, 故只需在成环前的链表上找交点\n",
+    "        tail1, tail2 = h1, h2\n",
+    "        l_diff = 0\n",
+    "        while tail1.next is not x_node1:\n",
+    "            l_diff += 1\n",
+    "            tail1 = tail1.next\n",
+    "        while tail2.next is not x_node2:\n",
+    "            l_diff -= 1\n",
+    "            tail2 = tail2.next\n",
+    "        p_long, p_short = h1, h2\n",
+    "        if l_diff < 0:\n",
+    "            p_long, p_short = h2, h1\n",
+    "        for _ in range(abs(l_diff)):\n",
+    "            p_long = p_long.next\n",
+    "        while p_long is not p_short:\n",
+    "            p_long = p_long.next\n",
+    "            p_short = p_short.next\n",
+    "        return p_long\n",
+    "\n",
+    "    # 成环点不同, 如果相交, 则交点是成环点; 如果不相交, 则交点不在环圈上。\n",
+    "    p = x_node1.next\n",
+    "    while p is not x_node1:\n",
+    "        if p is x_node2:\n",
     "            return p\n",
     "        p = p.next\n",
-    "    # 找不到, 说明不相交\n",
+    "    # 绕一圈找不到, 说明不相交\n",
     "    return None\n"
    ]
   },
@@ -1359,14 +1380,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "( 2.14s)判断链表相交 ✔️\n"
+      "( 4.16s)判断链表相交并获取交点 ✔️\n"
      ]
     }
    ],
@@ -1375,13 +1396,12 @@
     "\n",
     "st = t()\n",
     "for _ in range(test_time):\n",
-    "    h1, h2, intersect = generate_intersect_linked_list(max_size, max_value)\n",
-    "    test_intersect = get_intersect_linked_list(h1, h2)\n",
-    "    if intersect is not test_intersect:\n",
-    "        print(intersect, test_intersect, is_cycle_linked_list2(h1), is_cycle_linked_list2(h2))\n",
+    "    h1, h2, x_node = generate_random_intersect_linked_list(max_size, max_value)\n",
+    "    test_x_node = get_intersect_linked_list(h1, h2)\n",
+    "    if x_node is not test_x_node:\n",
     "        succeed = False\n",
     "        break\n",
-    "print(f'({t()-st:5.2f}s)判断链表相交', '✔️' if succeed else '❌')"
+    "print(f'({t()-st:5.2f}s)判断链表相交并获取交点', '✔️' if succeed else '❌')\n"
    ]
   }
  ],
