feat: day06, 特殊二叉树, 还差一些代码未完成

--- a/Lecture04/code-tree.ipynb
+++ b/Lecture04/code-tree.ipynb
@@ -126,10 +126,10 @@
     "        return\n",
     "    print_arr.append(root.val) if order == 'pre' else None\n",
     "\n",
-    "    recursion_binary_tree(root.left, order, print_arr) if root.left is not None else None\n",
+    "    recursion_binary_tree(root.left, order, print_arr) # 判不判断 root.left 是否为 None 都可以\n",
     "    print_arr.append(root.val) if order == 'in' else None\n",
     "\n",
-    "    recursion_binary_tree(root.right, order, print_arr) if root.right is not None else None\n",
+    "    recursion_binary_tree(root.right, order, print_arr)\n",
     "    print_arr.append(root.val) if order == 'pos' else None\n",
     "\n",
     "\n",
